--- a/src/scss/global/fonts.scss
+++ b/src/scss/global/fonts.scss
@@ -1,15 +1,15 @@
 @font-face {
-  font-family: "Playfair Display";
-  src: url('../fonts/Playfair-Display-Bold.woff2') format('woff2'),
-  url('../fonts/Playfair-Display-Bold.woff') format('woff');
-  font-weight: 700;
+  font-family: "Montserrat Black";
+  src: url('../fonts/Montserrat-Black.woff2') format('woff2'),
+  url('../fonts/Montserrat-Black.woff2.woff') format('woff');
+  font-weight: 900;
   font-style: normal;
 }
 @font-face {
-  font-family: "Raleway";
-  src: url('../fonts/Raleway-Bold.woff2') format('woff2'),
-  url('../fonts/Raleway-Bold.woff.woff') format('woff');
-  font-weight: 700;
+  font-family: "Montserrat Medium";
+  src: url('../fonts/Montserrat-Medium.woff2') format('woff2'),
+  url('../fonts/Montserrat-Medium.woff.woff') format('woff');
+  font-weight: 500;
   font-style: normal;
 }
 @font-face {
@@ -20,10 +20,10 @@
   font-style: normal;
 }
 @font-face {
-  font-family: "Raleway";
-  src: url('../fonts/Raleway-Light.woff2') format('woff2'),
-  url('../fonts/Raleway-Light.woff') format('woff');
-  font-weight: 300;
+  font-family: "Montserrat SemiBold";
+  src: url('../fonts/Montserrat-SemiBold.woff2') format('woff2'),
+  url('../fonts/Montserrat-SemiBold.woff') format('woff');
+  font-weight: 600;
   font-style: normal;
 }
 @font-face {
@@ -34,23 +34,16 @@
   font-style: normal;
 }
 @font-face {
-  font-family: 'Raleway';
-  src: url('../fonts/Raleway-Regular.woff2') format('woff2'),
-  url('../fonts/Raleway-Regular.woff') format('woff');
-  font-weight: 400;
+  font-family: 'Montserrat';
+  src: url('../fonts/Montserrat-Bold.woff2') format('woff2'),
+  url('../fonts/Montserrat-Bold.woff') format('woff');
+  font-weight: 700;
   font-style: normal;
 }
 @font-face {
-  font-family: "Raleway - Semi Bold";
-  src: url('../fonts/Raleway-SemiBold.woff2') format('woff2'),
-  url('../fonts/Raleway-SemiBold.woff') format('woff');
-  font-weight: 600;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Muller Thin";
-  src: url('../fonts/MullerThin.woff2') format('woff2'),
-  url('../fonts/MullerThin.woff') format('woff');
-  font-weight: 400;
+  font-family: "ProximaNova";
+  src: url('../fonts/ProximaNovaBold.woff2') format('woff2'),
+  url('../fonts/ProximaNovaBold.woff') format('woff');
+  font-weight: 700;
   font-style: normal;
 }
